# bc-gitops-demo-tui

./: .gitignore  README.md  rebar.config
priv/linux-x86_64/: demo-tui
rust/: Cargo.toml
rust/src/: main.rs
scripts/: build.sh
src/: demo_tui.app.src  demo_tui.erl  demo_tui_app.erl  demo_tui_sup.erl
