[package]
name = "demo-tui"
version = "0.1.0"
edition = "2021"
description = "TUI status display for bc_gitops demo"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "demo-tui"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
